--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "nuxt start",
     "heroku-postbuild": "npm run build"
   },
+  "resolutions": {
+    "@babel/core": "7.13.15",
+    "@babel/preset-env": "7.13.15"
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/vuetify": "^1.12.1",
