--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "nuxt start && uvicorn server.app:app --reload",
+    "start": "nuxt start",
     "heroku-postbuild": "npm run build"
+  },
+  "resolutions": {
+    "@babel/core": "7.13.15",
+    "@babel/preset-env": "7.13.15"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
